--- a/index.html
+++ b/index.html
@@ -4,27 +4,41 @@
     <meta charset="utf-8">
     <title>Genetics</title>
     <style media="screen">
+      body, input, button, select{
+        font-size: 18px;
+        font-family: "Courier New";
+      }
       table{
         border: black thin solid;
         border-collapse:collapse;
+        font-size: 18px;
       }
       table input{
+        font-size: 18px;
         border: none;
-        width: 20px;
+        width: 40px;
         border-collapse: collapse;
         padding-left: 0px;
         padding-right: 0px;
       }
       table#parInput tr td input{
+        font-size: 18px;
         border: none;
-        width: 20px;
+        width: 40px;
       }
       table#parInput{
+        font-size: 18px;
         border:none;
         border-collapse: collapse;
       }
       table#parInput tr, th, td{
         border:none;
+      }
+      table#Punnet .allele{
+        -webkit-text-fill-color: black;
+      }
+      table#freq .alleleInfo{
+        -webkit-text-fill-color: black;
       }
       td, th{
         border: black thin solid;
@@ -103,6 +117,7 @@
         <th>
           <select id="sortProp">
             <option value="freq">Frequency</option>
+            <option value="count">Count</option>
             <option value="none" selected>Nothing</option>
           </select>
         </th>
